# djrepo

./: build.sh
.github/workflows/: django.yml  react.yml
backend/: pyproject.toml  requirements.txt
backend/main/: utils.py  views.py
backend/main/management/commands/: generate_resumes.py
backend/mysite/: settings.py
frontend/src/: App.jsx
main/: urls.py  views.py
mysite/: settings.py
