[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "faker>=40.1.2",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg>=3.3.3",
    "whitenoise[brotli]>=6.11.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
